# loom

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  BUILD_PLAN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEV_TASKS.MD  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  QUALITY_CHECK.md  README.md  ROADMAP.md  SCHEMA-CHANGELOG.md  SCHEMA_CHANGES.md  SECURITY.md  UPDATES.md.bak  docker-compose.prod.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  validate.sh
.claude/: launch.json
.ecoweaver/: accessibility.md  architecture.md  index.md  linkml.md  ontology.md  prompting.md  publication.md  review.md  security.md  style.md  testing.md
.ecoweaver/prompts/: accessibility.md  bugfix.md  debug.md  feature.md  implement.md  performance.md  prime.md  publication-review.md  refactor.md  release.md  review-pr.md  schema-change.md  schema-migration.md  security-review.md  self-review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/accounts/: admin.py  models.py
apps/annotation/: admin.py  apps.py  models.py  policies.py  rollup.py  services.py  urls.py  utils.py  views.py
apps/audit/: admin.py  models.py
apps/documents/: admin.py  models.py  services.py  urls.py  views.py
apps/export/: apps.py  renderers.py  serializer.py  urls.py  validators.py  views.py
apps/llm/: apps.py  claude_proposer.py  forms.py  models.py  prompt_builder.py  proposer.py  triggers.py  urls.py  views.py
apps/ontology/: adhoc.py  admin.py  apps.py  loaders.py  models.py  project_service.py  services.py  urls.py  validation.py  views.py  wikidata_search.py
apps/projects/: admin.py  forms.py  models.py  services.py  upload_validation.py  urls.py  views.py
apps/schemas/: admin.py  apps.py  context_processors.py  input_binding.py  models.py  ontology_inference.py  schema_engine.py  services.py  ui_config.py  update_service.py  upstream.py  urls.py  views.py
config/: loom_ui.yaml  ontologies.yaml
config/schema/: camo-0.4.0.yaml  camo-0.4.1.yaml  camo-0.4.2.yaml  camo-0.5.0.yaml  camo-0.7.0.yaml  camo-0.7.1.yaml  camo-0.7.2.yaml  camo-0.7.3.yaml  camo-0.7.4.yaml
docker/: entrypoint.sh
docs/: README.md  admin-guide.md  annotating-your-first-paper.html  annotator-guide.md  architecture.md  core-functions.md  data-model.md  index.md  llm-proposals.md  migration-v0-to-v1.md  operations.md  performance-review-v1.0.md  security-review-v1.0.md
docs/roadmap/: NIGHTLY_WORKFLOW.md  NIGHT_TASK.md  v0.4.0-schema-admin.md  v0.5.0-form-builder.md  v0.6.0-ontology-manager.md  v0.7.0-update-manager.md  v0.8.0-llm-pipeline.md  v0.9.0-few-shot-metrics.md  v1.0.0-release.md
docs/user-guide/: after-submission.md  assignments.md  completing-and-submitting.md  creating-edges.md  creating-nodes.md  finding-causal-claims.md  glossary.md  index.md  saving-and-resuming.md  source-document.md  troubleshooting.md  workspace.md
helper-scripts/: marker_convert.py
helpers/opencode_global/: AGENTS.md
loom/: __init__.py  asgi.py  health.py  urls.py  wsgi.py
loom/settings/: base.py  dev.py  prod.py  test_sqlite.py
scripts/: check_migration_readiness.py
static/js/: annotation-actions.js  applied-to-list.js  coordinate-list.js  excerpt-bin.js  ontology-autocomplete.js  pdf-viewer.js  session-timer.js  span-select.js  upload-progress.js
templates/: base.html  home.html
templates/annotation/: annotate.html  review_document.html  schema_demo.html
templates/docs/: annotating-your-first-paper.html  index.html
templates/documents/: reader.html
templates/export/: export_detail.html  validate_result.html
templates/llm/: few_shot_selector.html  llm_config.html  llm_metrics.html  proposal_review.html
templates/ontology/: ontology_browse.html  ontology_list.html  ontology_upload.html
templates/projects/: attach_pdf.html  document_assign.html  document_detail.html  members.html  my_queue.html  pdf_upload.html  project_confirm_delete.html  project_detail.html  project_form.html  project_hidden_slots.html  project_list.html  project_settings.html  ris_bundle_import.html  ris_import.html
templates/registration/: login.html
templates/schemas/: apply_update.html  form_builder.html  schema_detail.html  schema_list.html  update_diff.html  upload.html
tests/: conftest.py  schema_fixtures.py  test_adhoc_ontology.py  test_admin_access_control.py  test_annotation.py  test_annotation_policies.py  test_annotation_rollup.py  test_annotation_utils.py  test_check_migration_readiness.py  test_documents.py  test_export.py  test_export_renderers_edge_cases.py  test_input_binding.py  test_llm_proposer.py  test_management_commands.py  test_migrate_graph_command.py  test_ontology.py  test_ontology_inference.py  test_ontology_integrations.py  test_ontology_services_edge_cases.py  test_project_settings.py  test_projects.py  test_projects_services_edge_cases.py  test_review.py  test_schema_upstream.py  test_schemas.py  test_security_review.py  test_smoke.py  test_views_and_services.py  test_wikidata_search.py
tests/annotation/: test_annotation_performance.py
tests/e2e/: test_full_annotation_workflow.py
tests/export/: test_export_performance.py
tests/fixtures/: toy_schema.yaml
tests/llm/: test_claude_proposer.py  test_few_shot_builder.py  test_few_shot_model.py  test_few_shot_selector_view.py  test_llm_config_view.py  test_llm_metrics_view.py  test_prompt_builder.py  test_proposal_outcome.py  test_proposal_review.py  test_proposer_config.py  test_triggers.py
tests/ontology/: test_linkml_loader.py  test_manage_views.py  (+1 more)
(+87 files in other folders)
