[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
dynamic = ["version"]
description = "Causal Mosaic annotation workbench"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    {name = "Tim Alamenciak", email = "tim.alamenciak@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=5.1",
    "psycopg[binary]>=3.1",
    "linkml-runtime>=1.7",
    "linkml>=1.7",
    "pronto>=2.5",
    "pyyaml>=6.0",
    "rispy>=0.9",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    # PDF extraction and Markdown generation: pdfplumber (MIT)
    # layout=True mode preserves multi-column reading order without ML models
    "pdfplumber>=0.11",
    # Server-side markdown rendering for canonical_markdown in annotation view
    "markdown>=3.6",
]

[project.optional-dependencies]
marker = [
    # Heavy ML dependency — only install when Marker-based PDF extraction is needed.
    # Requires: pip install "loom[marker]"
    "marker-pdf>=1.0",
]
dev = [
    "ruff>=0.4",
    "black==26.5.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "loom*"]

[tool.setuptools.dynamic]
version = {attr = "loom.__version__"}

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "loom.settings.dev"
testpaths = ["tests"]
addopts = "--no-migrations"
